--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "optimist": "0.6.0",
     "moment": "2.10.6",
     "async": "~0.9.0",
-    "dot":"~1.0.3",
+    "dot":"~1.0.3"
   },
   "devDependencies": {
   },
